--- a/sql/SQL.vcxproj.filters
+++ b/sql/SQL.vcxproj.filters
@@ -4,6 +4,8 @@
     <ClCompile Include="4D Plugin API\4DPluginAPI.c">
       <Filter>4D Plugin API</Filter>
     </ClCompile>
+    <ClCompile Include="4D Plugin API\Classes\C_TEXT.cpp" />
+    <ClCompile Include="support\4DPlugin-JSON.cpp" />
     <ClCompile Include="4DPlugin-SQL.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -22,6 +24,9 @@
     <ClInclude Include="4D Plugin API\PublicTypes.h">
       <Filter>4D Plugin API</Filter>
     </ClInclude>
+    <ClInclude Include="4D Plugin API\Classes\C_TEXT.h" />
+    <ClInclude Include="4D Plugin API\Classes\C_TYPES.h" />
+    <ClInclude Include="support\4DPlugin-JSON.h" />
     <ClInclude Include="4DPlugin-SQL.h" />
   </ItemGroup>
   <ItemGroup>
